backend: allow vercel previews via CORS; ignore data files

--- a/server/.env.example
+++ b/server/.env.example
@@ -4,3 +4,6 @@ PORT=4000
 # Frontend URL (for CORS) — set this in your deployment platform
 # Example: https://maruzzella-roster.vercel.app
 FRONTEND_URL=http://localhost:3000
+
+# Optional: comma-separated additional allowed origins (e.g. preview URLs)
+# FRONTEND_URLS=https://maruzzella-roster-git-main-user.vercel.app,https://another-preview.vercel.app
