--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ["nodejs_20"]
 
 [phases.install]
-cmds = ["cd server && npm ci"]
+cmds = ["npm ci --prefix server"]
 
 [start]
-cmd = "cd server && node index.js"
+cmd = "node server/index.js"
