--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,12 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.16.3"
+  },
+  "devDependencies": {
+    "prisma": "^6.19.0"
   }
 }
