feat: migrate to PostgreSQL for permanent data storage

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "start": "node index.js"
+    "start": "node index-db.js",
+    "build": "prisma generate && prisma db push --skip-generate",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
