chore: production cleanup - remove unused components and fix package name
- Fixed package.json name to comply with npm naming conventions (removed '&')
- Removed unused components: SettingsView, UserSwitcher, BulkShiftModal, EmployeeManagementModal
- Removed unused icons: CalendarIcon, ClockIcon, DocumentTextIcon, DownloadIcon, LoginIcon, LogoutIcon, ShareIcon, SparklesIcon, UserCircleIcon, XCircleIcon
- Kept PinModal (used by LoginView)
- Kept icons: UsersIcon, PlusIcon, PencilIcon, TrashIcon, BackspaceIcon (all actively used)
- Application tested and verified working on all flows

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "maruzzella-roster-&-clock-in",
+  "name": "maruzzella-roster-clock-in",
   "private": true,
   "version": "0.0.0",
   "type": "module",
